--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="MartyrEnemy.cpp" />
     <ClCompile Include="MeleeEnemy.cpp" />
     <ClCompile Include="ObjectPool.cpp" />
+    <ClCompile Include="PanelUI.cpp" />
     <ClCompile Include="ParallaxBackGround.cpp" />
     <ClCompile Include="ParallaxLayer.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -173,7 +174,6 @@
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="TTFclass.cpp" />
-    <ClCompile Include="UIElement.cpp" />
     <ClCompile Include="Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -201,6 +201,7 @@
     <ClInclude Include="MartyrEnemy.h" />
     <ClInclude Include="MeleeEnemy.h" />
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="PanelUI.h" />
     <ClInclude Include="ParallaxBackGround.h" />
     <ClInclude Include="ParallaxLayer.h" />
     <ClInclude Include="Player.h" />
